--- a/properties/got.properties
+++ b/properties/got.properties
@@ -3,7 +3,7 @@ seed=30006
 # delay at end of round
 watchingTime = 8000
 # players
-players.0=human
-players.1=random
-players.2=random
-players.3=random
+players.0=smart
+players.1=smart
+players.2=smart
+players.3=smart
