--- a/properties/got.properties
+++ b/properties/got.properties
@@ -3,7 +3,7 @@ seed=300065678
 # delay at end of round
 watchingTime = 8000
 # players
-players.0=human
-players.1=human
-players.2=human
-players.3=human
+players.0=random
+players.1=random
+players.2=random
+players.3=random
